--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- FAVICON -->
-		<link rel="icon" type="image/png" href="assets/img/favicon01.png"> 
+		<link rel="icon" type="image/png" href="assets/img/favicon03.png"> 
 		<!-- FONTS -->
 		<link rel="stylesheet" href="assets/fonts/fontawesome/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/fonts/iconsmind/iconsmind.css">
@@ -28,11 +28,9 @@
 
 							<!--- logo -->
 							<div class="vl-header-left">
-								<!--
 								<a href="index.html" class="vl-site-logo">
-								<img src="assets/img/logo.png" alt="Vinero" style="max-height: 13px"> 
-								</a>
-								-->
+								<img src="assets/img/title_icon.png" alt="text_icon" style="max-height: 35px"> 
+								</a>	
 							</div>
 
 							<div class="vl-header-right">
@@ -226,9 +224,11 @@
 
 								
 							<div class="vl-footer-copyright">
-								<p>台南市官田工業區工業路3號 TEL:06-6983929 FAX:06-6992187</p>
+								<p>台南市官田工業區工業路3號</p>
+								<p>TEL:06-6983929 FAX:06-6992187</p>
                                 <p>G.M.P.工廠登記證 99-657866-02</p>
-								<p>Copyright ©2023 LI-AN BIOTECHNOLOGY PHARMACEUTICAL CO., LTD. All rights reserved</p>
+								<p>Copyright © 2023 LI-AN BIOTECHNOLOGY PHARMACEUTICAL CO., LTD.</p>
+								<p>All rights reserved</p>
 							</div>
 						</div>
 					</div>
