--- a/news.html
+++ b/news.html
@@ -20,12 +20,11 @@
 				<header class="vl-header-holder vl-header-fixed" data-header-fixed="1">
 					<div class="container">
 						<div class="vl-header-inner">
+							<!--- logo -->
 							<div class="vl-header-left">
-								<!--
 								<a href="index.html" class="vl-site-logo">
-								<img src="assets/img/logo.png" alt="Vinero" style="max-height: 13px"> 
-								</a>
-								-->
+								<img src="assets/img/title_icon.png" alt="text_icon" style="max-height: 35px"> 
+								</a>	
 							</div>
 							<div class="vl-header-right">
 								<div class="vl-navigation-standard-holder">
@@ -161,11 +160,13 @@
 								<H4>星期一 ~ 星期五/08:00-17:00</H4>
 
 								
-							<div class="vl-footer-copyright">
-								<p>台南市官田工業區工業路3號 TEL:06-6983929 FAX:06-6992187</p>
-                                <p>G.M.P.工廠登記證 99-657866-02</p>
-								<p>Copyright ©2023 LI-AN BIOTECHNOLOGY PHARMACEUTICAL CO., LTD. All rights reserved</p>
-							</div>
+								<div class="vl-footer-copyright">
+									<p>台南市官田工業區工業路3號</p>
+									<p>TEL:06-6983929 FAX:06-6992187</p>
+									<p>G.M.P.工廠登記證 99-657866-02</p>
+									<p>Copyright © 2023 LI-AN BIOTECHNOLOGY PHARMACEUTICAL CO., LTD.</p>
+									<p>All rights reserved</p>
+								</div>
 						</div>
 					</div>
 				</div>
